--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </div>
 
     <div class="profile">
-      <img src="asdf.jpg" alt="Greg's Profile Picture">
+      <img src="asdf.jpg" alt="">
       <div class="profile-info">
         <h2>FUD "FUD Cabal" Cabal</h2>
         <p>📍 Albuquerque, NM</p>
@@ -151,7 +151,7 @@
       </p>
     </div>
 
-    <button class="donate-button">Donate Now to Save FUD Cabal</button>
+    <button class="donate-button"><a href="https://www.snek.fun/token/462387dd583b681d7a798940187d4a7566a634deaf196ba2dbe50a765368656c6c696573?1756942808481">Donate Now to Save FUD Cabal</a></button>
 
     <div class="footer">
       🚀 Please save me now.
